# Nexile

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Resources.aps  readme.md  vcpkg.json
cmake/: ValidateRuntime.cmake
src/: RCa07504  RCa11652  RCb11652  Resources.rc  main.cpp
src/Config/: ProfileManager.cpp  ProfileManager.h
src/Core/: NexileApp.cpp  NexileApp.h
src/Game/: GameDetector.cpp  GameDetector.h  GameTypes.h
src/Input/: HotkeyManager.cpp  HotkeyManager.h
src/Modules/: ModuleInterface.h  PriceCheckModule.cpp  PriceCheckModule.h  SettingsModule.cpp  SettingsModule.h
src/UI/: OverlayWindow.cpp  OverlayWindow.h  Resources.h
src/UI/HTML/: browser.html  main_overlay.html  price_check_module.html  settings.html  welcome.html
src/Utils/: Logger.h  Utils.cpp  Utils.h
